--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest",
+    "test": "jest --watchAll",
     "commit": "git-cz",
     "lint": "eslint ./src",
     "postinstall": "husky install"
